# Haskell-test

./: .gitignore  README.md  haskell-calc-dsl.cabal
app/: Main.hs
src/CalcDsl/: Ast.hs  Evaluator.hs  Parser.hs  Web.hs
